# ChangeLog for app-arch/bsdtar
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.19 2006/01/05 10:08:06 flameeyes Exp $

  05 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
  -bsdtar-1.02.036.ebuild:
  Drop old version.

*bsdtar-1.2.37 (08 Nov 2005)

  08 Nov 2005; Diego Pettenò <flameeyes@gentoo.org> +bsdtar-1.2.37.ebuild:
  Updated to latest upstream version. Changed versioning scheme by upstream.

  05 Nov 2005; Diego Pettenò <flameeyes@gentoo.org>
  -bsdtar-1.02.030.ebuild, -bsdtar-1.02.034.ebuild:
  Remove old versions.

*bsdtar-1.02.036 (13 Oct 2005)

  13 Oct 2005; Diego Pettenò <flameeyes@gentoo.org>
  +bsdtar-1.02.036.ebuild:
  Updated to latest version.

  09 Oct 2005; Diego Pettenò <flameeyes@gentoo.org>
  bsdtar-1.02.027-r1.ebuild, bsdtar-1.02.030.ebuild, bsdtar-1.02.034.ebuild:
  Don't symlink bsdtar on every BSD userland, but just on freebsd. NetBSD uses
  OpenBSD pax instead, for example.

  25 Sep 2005; Diego Pettenò <flameeyes@gentoo.org> bsdtar-1.02.034.ebuild:
  Don't try to use -static on Darwin userland, as it doesn't work.

*bsdtar-1.02.034 (25 Sep 2005)

  25 Sep 2005; Diego Pettenò <flameeyes@gentoo.org>
  -bsdtar-1.02.032.ebuild, -bsdtar-1.02.033.ebuild, +bsdtar-1.02.034.ebuild:
  Updated to latest upstream version, cleaned up old versions.

*bsdtar-1.02.033 (24 Sep 2005)

  24 Sep 2005; Diego Pettenò <flameeyes@gentoo.org>
  +bsdtar-1.02.033.ebuild:
  Update to latest upstream version.

*bsdtar-1.02.032 (07 Sep 2005)

  07 Sep 2005; Diego Pettenò <flameeyes@gentoo.org>
  -files/bsdtar-1.02.031-wchar.patch, -bsdtar-1.02.031.ebuild,
  +bsdtar-1.02.032.ebuild:
  Updated to latest upstream version, dropped wchar patch as new libarchive
  fixes it definitively (changed dependency to avoid problems; also now just
  RDEPEND on it if not built static, and not on zlib/bzip2 as they are
  dependencies of libarchive itself).

*bsdtar-1.02.031 (06 Sep 2005)
