@@ -1,17 +1,37 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 d5036b8ee8baa9615e1ff537edad3867 ChangeLog 3668
+MD5 5ebd4ee85ff71184d9a54c4124f4248d ChangeLog 3802
+RMD160 9800c41156a7d97a1430836140fe50a0ab8b0401 ChangeLog 3802
+SHA256 8610b3d578daff10905c306b31f7d28c77dc8bc3d64ef571f89afe8513e9b53e ChangeLog 3802
 MD5 48b22e51a819c59e46fc138c054cde24 bsdtar-1.02.027-r1.ebuild 1108
+RMD160 0373bfb85e38be5dce78b46fa79751310047aed1 bsdtar-1.02.027-r1.ebuild 1108
+SHA256 c440fc335e973e57a19a1b1b65950d7876dcdf82e3855a2590eb9d06cb348f84 bsdtar-1.02.027-r1.ebuild 1108
 MD5 ac04757647a83c4d42534be036cc9b78 bsdtar-1.2.37.ebuild 937
+RMD160 1ec9c184cf7ba56bfdbb23e8da080d7c93f90646 bsdtar-1.2.37.ebuild 937
+SHA256 9aabc54e4cef64fab90bb7ef403585a8bb8faafed2d8206cbf7292021d49afb3 bsdtar-1.2.37.ebuild 937
+MD5 0674feb289a2b6348a47d3765a1fa7b0 bsdtar-1.2.38.ebuild 940
+RMD160 b9237fe19b06658d8b8785168104b27fd42012ac bsdtar-1.2.38.ebuild 940
+SHA256 ad62a7a29aa1cb1e77eaa6bae2cb4a859eb06689be10db8920cdc5207f0e2f11 bsdtar-1.2.38.ebuild 940
 MD5 23a5ba81fd708274f460d74e61f6f10d files/bsdtar-1.02.027-osx.patch 475
+RMD160 5bfe5047f3e629dbadd0de7221aa85e06499af91 files/bsdtar-1.02.027-osx.patch 475
+SHA256 4ae8a76c18ee03bc2d383fc3d7a1d7e2af663cfbf5cf2c37b95fdef5488d91d1 files/bsdtar-1.02.027-osx.patch 475
 MD5 7cf5fd7cad3a8974a71ce2e1622824c5 files/digest-bsdtar-1.02.027-r1 67
+RMD160 618738e0a47f352bf383afd3df2866acae5ac40f files/digest-bsdtar-1.02.027-r1 67
+SHA256 3dd7e1724d70f3a5df9c82b4e1bf31d3c1dc32b04d011811d7739224e3df5566 files/digest-bsdtar-1.02.027-r1 67
 MD5 04e22a263b525143882d13d7dd2b83a7 files/digest-bsdtar-1.2.37 65
+RMD160 9daa6733f3d744e76b79ee866b567c332f76d1e3 files/digest-bsdtar-1.2.37 65
+SHA256 7293c4e47058bd4210da83146e4fbe595de154d07735b5ecb83be72fb2a33596 files/digest-bsdtar-1.2.37 65
+MD5 1e77db6ad616cb2ad955f980adc8561e files/digest-bsdtar-1.2.38 241
+RMD160 9eef3ea92f37a206592cbd646ad675bc3f4d3945 files/digest-bsdtar-1.2.38 241
+SHA256 f53c4c793b1304dde232ab7cd20ce743f97e9d8f17f18dfdd9831f2ccb0e76cc files/digest-bsdtar-1.2.38 241
 MD5 afec809b169074e5d5b0803e4f8f5ec8 metadata.xml 428
+RMD160 b1ff6b3d84ad489dc4f5ab5f1d9ee9b60266c2ff metadata.xml 428
+SHA256 236fee13551e3785be53bd3f70c0784803827edf245c913851f239689e3278f4 metadata.xml 428
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.2 (GNU/Linux)
+Version: GnuPG v1.4.2.1 (GNU/Linux)
 
-iD8DBQFDvPAYAiZjviIA2XgRArG5AKDwUHYkPxqW94HJmoNYWlHNvfF0zgCff/6R
-/EAV/aTfbOJPkAIdEcCU20E=
-=Xj4A
+iD8DBQFD9wJfAiZjviIA2XgRApzmAKDIZbJOE7DQZ4ILZSBz4ue0SJpD/wCdGRYq
+N+jQcJifS63A2J0ERM9qtLI=
+=PZMJ
 -----END PGP SIGNATURE-----
