@@ -1,0 +1,3 @@
+MD5 a82c98ac8e4ea08a072ea81a855e6f88 bsdtar-1.2.38.tar.gz 137367
+RMD160 d8228c301a66e260c87b860b231066e8e20c953a bsdtar-1.2.38.tar.gz 137367
+SHA256 d01bc74e82c70719ff0aa02ebe83833cbb95981f2c7867229d010d037cdf6992 bsdtar-1.2.38.tar.gz 137367
