@@ -1,6 +1,11 @@
 # ChangeLog for app-arch/bsdtar
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.19 2006/01/05 10:08:06 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/bsdtar/ChangeLog,v 1.20 2006/02/18 11:17:33 flameeyes Exp $
+
+*bsdtar-1.2.38 (18 Feb 2006)
+
+  18 Feb 2006; Diego Pettenò <flameeyes@gentoo.org> +bsdtar-1.2.38.ebuild:
+  Bump following upstream.
 
   05 Jan 2006; Diego Pettenò <flameeyes@gentoo.org>
   -bsdtar-1.02.036.ebuild:
